--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f0f0f0;
+    background-color: black;
 }
 
 .container {
@@ -20,9 +20,9 @@ body {
 .square {
     width: 100%;
     padding-bottom: 100%; /* Ensures that boxes are square */
-    background-color: #fff;
+    background-color: grey;
     transition: background-color 1s ease;
-    border: 1px solid #ddd;
+    border: 1px solid black;
 }
 
 /* Hover Effect */
