--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .square {
     height: 20px;
     width: 20px;
-    background: rgb(29, 29, 29);
+    background: black;
 }
 
 * {
@@ -10,10 +10,10 @@
     margin: 0;
 }
 .container {
-    padding: 20px;
+    padding: 10px;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 5px;
 
 }
